--- a/theme/mytheme.css
+++ b/theme/mytheme.css
@@ -114,7 +114,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   font-size: 16px;
   position: absolute !important;
   bottom: 8px;
-  font-weight: 400;
+  font-weight: 700;
 }
 
 .reveal table {
@@ -317,7 +317,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal .slides section,
 .reveal .slides section > section {
   line-height: 1.3;
-  font-weight: inherit;
+  font-weight: normal;
 }
 
 /*********************************************
